--- a/.github/workflows/docker_hub_push.yaml
+++ b/.github/workflows/docker_hub_push.yaml
@@ -1,3 +1,11 @@
 name: docker hub push
 
 on: [push]
+
+jobs: 
+  docker_hub_images:
+    runs-on: ubuntu-latest
+    
+    steps: 
+      - run: echo "hello world"
+
