--- a/.github/workflows/docker_hub_push.yaml
+++ b/.github/workflows/docker_hub_push.yaml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     
     steps: 
-      - run: echo "This will Build and push the Docker images into Docker repo"
+      - run: echo "This will Build and push the Docker images into Docker repo ji"
       - name: Checkout
         uses: actions/checkout@v3.5.3
       - name: Docker Login
