--- a/.github/workflows/docker_hub_push.yaml
+++ b/.github/workflows/docker_hub_push.yaml
@@ -5,11 +5,24 @@ on: [push]
 jobs: 
   docker_hub_images:
     runs-on: ubuntu-latest
-    
     steps: 
-      - run: echo "This will Build and push the Docker images into Docker repo ji"
+      - run: echo "This will Build, execute and push the Docker images into Docker repo ji"
       - name: Checkout
         uses: actions/checkout@v3.5.3
+        
+      - name: This will install Java JDK 11 and Maven
+        run: | 
+          sudo apt update
+          sudo apt install openjdk-11-jdk -y
+          sudo apt install maven -y
+          
+      - name: This will give version of packages which have install
+        run: | 
+          java -version
+          mvn -version
+      - name: This will execute and run the packages.
+        run: mvn clean package
+        
       - name: Docker Login
         uses: docker/login-action@465a07811f14bebb1938fbed4728c6a1ff8901fc
         with:
