--- a/.github/workflows/docker_hub_push.yaml
+++ b/.github/workflows/docker_hub_push.yaml
@@ -10,7 +10,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3.5.3
         
-      - name: This will install Java JDK 11 and Maven
+      - name: This will install Java JDK 11 and Maven.
         run: | 
           sudo apt update
           sudo apt install openjdk-11-jdk -y
