--- a/.github/workflows/sonarqube.yaml
+++ b/.github/workflows/sonarqube.yaml
@@ -1,4 +1,4 @@
-name: Build
+name: sonarqube_test
 on:
   push:
     branches:
@@ -35,3 +35,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+      - name: Trigger Dependency Workflow
+        uses: actions/workflow_run@v2
+        with:
+          workflow: "docker_hub_push.yaml"
