--- a/.github/workflows/docker_hub_push.yaml
+++ b/.github/workflows/docker_hub_push.yaml
@@ -1,6 +1,11 @@
 name: docker hub push
 
-on: [push]
+on:
+  workflow_run:
+    workflows:
+      - "sonarqube_test" # The name of the triggering workflow
+    types:
+      - completed
 
 jobs: 
   docker_hub_images:
