--- a/.github/workflows/sonarqube.yaml
+++ b/.github/workflows/sonarqube.yaml
@@ -40,4 +40,4 @@ jobs:
       - name: Trigger Dependency Workflow
         uses: actions/workflow_run@v2
         with:
-          workflow: "docker_hub_push.yaml"
+          workflow: "./docker_hub_push.yaml"
