--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,5 +19,7 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+     - name: Build with Maven
+       run: mvn clean install
     - name: Build with Maven
       run: mvn -B package --file pom.xml
