--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
            <version>${spring-boot.version}</version>
        </dependency>
        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>colorful-app</artifactId>
+            <version>1.0.0</version>
+       </dependency>
+       <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>${spring-boot.version}</version>
