--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,12 @@
        <java.version>11</java.version>
        <spring-boot.version>2.5.0</spring-boot.version>
    </properties>
+   <repositories>
+        <repository>
+           <id>github</id>
+           <url>https://maven.pkg.github.com/azvenkat7/javaapp_mvn</url>
+        </repository>
+   </repositories>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
