--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,7 +23,7 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
           server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-          settings-path: ${{ github.workspace }} # location for the settings.xml file
+          #settings-path: ${{ github.workspace }} # location for the settings.xml file
 
       - name: Cache Maven packages
         uses: actions/cache@v1
