--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,5 @@
 name: Delete old workflow runs
+
 on:
   workflow_dispatch:  # Allow manual trigger if needed
 
@@ -7,13 +8,24 @@ jobs:
   del_runs:
     runs-on: ubuntu-latest
     permissions:
-      actions: write
+      actions: write  # Permissions to delete workflow runs
       contents: read
     steps:
-      - name: Delete workflow runs
-        uses: javaapp_mvn/delete-workflow-runs@main
-        with:
-          token: ${{ github.token }}
-          repository: ${{ github.repository }}
-          retain_days: 30
-          keep_minimum_runs: 6
+      - name: Install GitHub CLI
+        run: |
+          sudo apt update
+          sudo apt install gh
+
+      - name: Authenticate with GitHub CLI
+        run: |
+          echo ${{ github.token }} | gh auth login --with-token
+
+      - name: Delete old workflow runs
+        run: |
+          # Get all workflow runs older than 30 days
+          gh api repos/${{ github.repository }}/actions/runs \
+            --jq '.workflow_runs[] | select(.created_at < "30 days ago") | .id' | while read run_id; do
+              # Delete the old workflow run
+              gh api repos/${{ github.repository }}/actions/runs/$run_id --method DELETE
+              echo "Deleted workflow run $run_id"
+            done
