--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,12 +19,18 @@ jobs:
                            -H "Accept: application/vnd.github.v3+json" \
                            https://api.github.com/repos/${{ github.repository }}/actions/runs)
                            
-          echo "Response: $response"
+
+          # Filter and get workflow runs older than 30 days
+          old_runs=$(echo $response | jq -r ".workflow_runs[] | select(.created_at < \"$run_date\") | .id")
           
-          # Filter and delete workflow runs older than 30 days
-          echo $response | jq -r ".workflow_runs[] | select(.created_at < \"$run_date\") | .id" | while read run_id; do
-            echo "Deleting run $run_id..."
-            curl -X DELETE -H "Authorization: Bearer ${{ secrets.PAT }}" \
-                  https://api.github.com/repos/${{ github.repository }}/actions/runs/$run_id
-            echo "Deleted run $run_id"
-          done
+          if [ -z "$old_runs" ]; then
+            echo "No workflow runs older than 30 days found."
+          else
+            # Delete old workflow runs
+            echo "$old_runs" | while read run_id; do
+              echo "Deleting run $run_id..."
+              curl -X DELETE -H "Authorization: Bearer ${{ secrets.PAT }}" \
+                    https://api.github.com/repos/${{ github.repository }}/actions/runs/$run_id
+              echo "Deleted run $run_id"
+            done
+          fi
