--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,26 +11,20 @@ jobs:
     steps:
       - name: Get old workflow runs
         run: |
-          echo "Fetching workflow runs older than 5 days"
-          run_date=$(date -d '5 days ago' --utc +%Y-%m-%dT%H:%M:%SZ)
+          echo "Fetching workflow runs older than 30 days"
+          run_date=$(date -d '30 days ago' --utc +%Y-%m-%dT%H:%M:%SZ)
           echo "Looking for runs older than: $run_date"
           
           response=$(curl -H "Authorization: Bearer ${{ secrets.PAT }}" \
                            -H "Accept: application/vnd.github.v3+json" \
                            https://api.github.com/repos/${{ github.repository }}/actions/runs)
                            
-
-          # Filter and get workflow runs older than 5 days
-          old_runs=$(echo $response | jq -r ".workflow_runs[] | select(.created_at < \"$run_date\") | .id")
+          echo "Response: $response"
           
-          if [ -z "$old_runs" ]; then
-            echo "No workflow runs older than 5 days found."
-          else
-            # Delete old workflow runs
-            echo "$old_runs" | while read run_id; do
-              echo "Deleting run $run_id..."
-              curl -X DELETE -H "Authorization: Bearer ${{ secrets.PAT }}" \
-                    https://api.github.com/repos/${{ github.repository }}/actions/runs/$run_id
-              echo "Deleted run $run_id"
-            done
-          fi
+          # Filter and delete workflow runs older than 30 days
+          echo $response | jq -r ".workflow_runs[] | select(.created_at < \"$run_date\") | .id" | while read run_id; do
+            echo "Deleting run $run_id..."
+            curl -X DELETE -H "Authorization: Bearer ${{ secrets.PAT }}" \
+                  https://api.github.com/repos/${{ github.repository }}/actions/runs/$run_id
+            echo "Deleted run $run_id"
+          done
