--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,17 +14,33 @@ jobs:
           echo "Fetching workflow runs older than 30 days"
           run_date=$(date -d '30 days ago' --utc +%Y-%m-%dT%H:%M:%SZ)
           echo "Looking for runs older than: $run_date"
+
+          # Initialize page number and response variable
+          page=1
           
-          response=$(curl -H "Authorization: Bearer ${{ secrets.PAT }}" \
-                           -H "Accept: application/vnd.github.v3+json" \
-                           https://api.github.com/repos/${{ github.repository }}/actions/runs)
-                           
-          echo "Response: $response"
-          
-          # Filter and delete workflow runs older than 30 days
-          echo $response | jq -r ".workflow_runs[] | select(.created_at < \"$run_date\") | .id" | while read run_id; do
-            echo "Deleting run $run_id..."
-            curl -X DELETE -H "Authorization: Bearer ${{ secrets.PAT }}" \
-                  https://api.github.com/repos/${{ github.repository }}/actions/runs/$run_id
-            echo "Deleted run $run_id"
+          # Loop to handle pagination and fetch all workflow runs
+          while true; do
+            response=$(curl -H "Authorization: Bearer ${{ secrets.PAT }}" \
+                             -H "Accept: application/vnd.github.v3+json" \
+                             "https://api.github.com/repos/${{ github.repository }}/actions/runs?page=$page&per_page=100")
+
+            # Check if the response contains any runs
+            runs_count=$(echo "$response" | jq '.workflow_runs | length')
+            if [ "$runs_count" -eq 0 ]; then
+              echo "No more runs found, exiting pagination."
+              break
+            fi
+            
+            echo "Response from page $page: $response"
+
+            # Filter and delete workflow runs older than 30 days
+            echo "$response" | jq -r ".workflow_runs[] | select(.created_at < \"$run_date\") | .id" | while read run_id; do
+              echo "Deleting run $run_id..."
+              curl -X DELETE -H "Authorization: Bearer ${{ secrets.PAT }}" \
+                  "https://api.github.com/repos/${{ github.repository }}/actions/runs/$run_id"
+              echo "Deleted run $run_id"
+            done
+            
+            # Increment the page number for the next iteration
+            page=$((page + 1))
           done
