--- a/.github/workflows/pr-checklist-maven-publish.yml
+++ b/.github/workflows/pr-checklist-maven-publish.yml
@@ -4,8 +4,13 @@
 name: Maven Package
 
 on:
-  release:
-    types: [created]
+  push:
+    branches:
+      - "main"  
+  pull_request:
+    types: [opened, synchronize, reopened, closed]
+    branches:
+      - main  # Trigger on pull requests targeting the master branch
 
 jobs:
   build:
