--- a/.github/workflows/pr-checklist-maven-publish.yml
+++ b/.github/workflows/pr-checklist-maven-publish.yml
@@ -18,7 +18,8 @@ jobs:
       pull-requests: write
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up JDK 11
         uses: actions/setup-java@v4
@@ -40,7 +41,7 @@ jobs:
           checklist=$(cat <<EOF
   ## Automated PR Checklist Results:
   - Build with Maven: [ ]
-  EOF
+EOF
           )
 
           # If the Maven build was successful, update the checklist with a checked box
@@ -48,8 +49,8 @@ jobs:
             checklist="${checklist//- Build with Maven: \[ \]/- Build with Maven: [x]}"
           fi
 
-          # Output the checklist as a job output using GITHUB_OUTPUT
-          echo "checklist=$checklist" >> $GITHUB_OUTPUT
+          # Output the checklist as a job output using the correct syntax
+          echo "checklist=$checklist" >> $GITHUB_ENV
 
       # Debug checklist value and GitHub API URL
       - name: Debug checklist value and GitHub API URL
