--- a/.github/workflows/pr-checklist-maven-publish.yml
+++ b/.github/workflows/pr-checklist-maven-publish.yml
@@ -5,7 +5,11 @@ on:
     branches:
       - "*"
   pull_request:
-    types: [opened, synchronize, reopened, closed]
+    types: 
+      - opened
+      - synchronize
+      - reopened
+      - closed
     branches:
       - "*"
 
