--- a/.github/workflows/pr-checklist-maven-publish.yml
+++ b/.github/workflows/pr-checklist-maven-publish.yml
@@ -5,11 +5,7 @@ on:
     branches:
       - "*"
   pull_request:
-    types: 
-      - opened
-      - synchronize
-      - reopened
-      - closed
+    types: [opened, synchronize, reopened, closed]
     branches:
       - "*"
 
@@ -22,56 +18,48 @@ jobs:
       pull-requests: write
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v4
-        with:
-          java-version: '11'
-          distribution: 'temurin'
-          server-id: github
-          settings-path: ${{ github.workspace }}
+    - name: Set up JDK 11
+      uses: actions/setup-java@v4
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        server-id: github
+        settings-path: ${{ github.workspace }}
 
-      - name: Build with Maven
-        id: maven-build
-        run: mvn -B package --file pom.xml
+    - name: Build with Maven
+      id: maven-build
+      run: mvn -B package --file pom.xml
 
-      # Generate checklist results
-      - name: Generate checklist results
-        id: generate_checklist
-        run: |
-          # Define the checklist format with placeholders instead of markdown checkboxes
-          checklist=$(cat <<EOF
-  ## Automated PR Checklist Results:
-  - Build with Maven: [ ]
-EOF
-          )
-
-          # If the Maven build was successful, update the checklist with a checked box
-          if [[ "${{ steps.maven-build.outcome }}" == "success" ]]; then
-            checklist="${checklist//- Build with Maven: \[ \]/- Build with Maven: [x]}"
-          fi
-
-          # Output the checklist as a job output using the correct syntax
-          echo "checklist=$checklist" >> $GITHUB_ENV
-
-      # Debug checklist value and GitHub API URL
-      - name: Debug checklist value and GitHub API URL
-        run: |
-          checklist="${{ steps.generate_checklist.outputs.checklist }}"
-          echo "Raw output of checklist: $checklist"
-          echo "Length of checklist: ${#checklist}"
-          echo "Repository: ${{ github.repository }}"
-          echo "PR Number: ${{ github.event.pull_request.number }}"
-          echo "GitHub API URL: https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
-
-      # Post checklist results as a comment on the PR
-      - name: Post checklist results
-        if: github.event_name == 'pull_request'
-        run: |
-          checklist="${{ steps.generate_checklist.outputs.checklist }}"
-          body="{\"body\": \"$checklist\"}"
-          url="https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
-          headers="Authorization: token ${{ secrets.GITHUB_TOKEN }}"
-          curl -X POST -H "$headers" -d "$body" "$url"
+    # Generate checklist results
+    - name: Generate checklist results
+      id: generate_checklist
+      run: |
+        # Define the checklist format with placeholders instead of markdown checkboxes
+        checklist="## Automated PR Checklist Results:
+        - Build with Maven: [ ]"
+        # If the Maven build was successful, update the checklist with a checked box
+        if [[ "${{ steps.maven-build.outcome }}" == "success" ]]; then
+          checklist="${checklist//- Build with Maven: \[ \]/- Build with Maven: [x]}"
+        fi
+        # Output the checklist directly
+        echo "checklist=$checklist"
+    # Debug checklist value and GitHub API URL
+    - name: Debug checklist value and GitHub API URL
+      run: |
+        checklist="${{ steps.generate_checklist.outputs.checklist }}"
+        echo "Raw output of checklist: $checklist"
+        echo "Length of checklist: ${#checklist}"
+        echo "Repository: ${{ github.repository }}"
+        echo "PR Number: ${{ github.event.pull_request.number }}"
+        echo "GitHub API URL: https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
+    # Post checklist results as a comment on the PR
+    - name: Post checklist results
+      if: github.event_name == 'pull_request'
+      run: |
+        checklist="${{ steps.generate_checklist.outputs.checklist }}"
+        body="{\"body\": \"$checklist\"}"
+        url="https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
+        headers="Authorization: token ${{ secrets.GITHUB_TOKEN }}"
+        curl -X POST -H "$headers" -d "$body" "$url"
