--- a/.github/workflows/pr-checklist-maven-publish.yml
+++ b/.github/workflows/pr-checklist-maven-publish.yml
@@ -43,8 +43,9 @@ jobs:
         if [[ "${{ steps.maven-build.outcome }}" == "success" ]]; then
           checklist="${checklist//- Build with Maven: \[ \]/- Build with Maven: [x]}"
         fi
-        # Output the checklist directly
-        echo "checklist=$checklist"
+       
+        Write-Output "Checklist Output: $checklist"
+        echo "::set-output name=checklist::$checklist"
     # Debug checklist value and GitHub API URL
     - name: Debug checklist value and GitHub API URL
       run: |
